Devel ets db_dapter

--- a/boss.config
+++ b/boss.config
@@ -64,11 +64,13 @@
 %%   to false. Requires cache_enable to be set to true.
 
     {db_host, "localhost"},
-    {db_port, 5432},
-    {db_adapter, pgsql},
-    {db_username, "mail"},
-    {db_password, "mail"},
-    {db_database, "mailserver"},
+    {db_port, 1978},
+    {db_adapter, mock},
+%    {db_port, 5432},
+%    {db_adapter, pgsql},
+%    {db_username, "mail"},
+%    {db_password, "mail"},
+%    {db_database, "mailserver"},
 
 %%  MongoDB only
 %%
